fixes Dial appearance on Firefox

--- a/src/components/editor/controls/Dial/Dial.css
+++ b/src/components/editor/controls/Dial/Dial.css
@@ -15,14 +15,17 @@
   position: absolute;
   left: 50%;
   top: 0%;
+  transform-origin: 50% 100%;
   -ms-transform-origin-x: 50%;
   -ms-transform-origin-y: 100%;
   -webkit-transform-origin-x: 50%;
   -webkit-transform-origin-y: 100%;
+  -moz-transform-origin: 50% 100%;
 }
 
 .range {
   /* Hide the default range input appearance */
+  appearance: none;
   -webkit-appearance: none;
   width: 100%;
   height: 50%;
@@ -34,8 +37,18 @@
   cursor: grab;
 
   /* Custom thumb style */
+  &::-moz-range-thumb {
+    -webkit-appearance: none;
+    background-color: transparent;
+    appearance: hidden;
+    border: none;
+    width: 20px;
+    height: 20px;
+  }
+
   &::-webkit-slider-thumb {
     -webkit-appearance: none;
+    background-color: transparent;
     appearance: hidden;
     width: 20px;
     height: 20px;
